--- a/flowerella/src/slogin.css
+++ b/flowerella/src/slogin.css
@@ -11,8 +11,7 @@ body {
   width: 100%;
   height: 100%;
 
-  
-  background-image: url("./background2.jpg");
+  background-image: url("./assets/pink-flowers.jpg");
   background-size: cover;
   background-position: center;
 
@@ -26,7 +25,7 @@ body {
   content: "";
   position: absolute;
   inset: 0;
-  background: rgba(255, 255, 255, 0.65); 
+  background: rgba(255, 255, 255, 0.65);
 }
 
 
@@ -39,7 +38,7 @@ body {
   width: 350px;
   text-align: center;
   border-radius: 15px;
-  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
 }
 
 .login-box h1 {
